--- a/frontend/src/components/common/PoweredByFooter/FloatingPoweredBy.module.scss
+++ b/frontend/src/components/common/PoweredByFooter/FloatingPoweredBy.module.scss
@@ -8,6 +8,7 @@
     margin-top: 30px;
     display: flex;
     justify-content: center;
+    color: var(--checkout-text-secondary, #6B7280);
 
     .logo {
         width: 20px;
@@ -26,5 +27,6 @@
     a {
         text-decoration: none;
         font-weight: 600;
+        color: var(--checkout-accent, var(--mantine-primary-color-filled));
     }
 }
